--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,15 +1,16 @@
-.padding-t {
-    padding: 2%;
+.rodo{
+    background-color:#3298dc!important;
+    border-radius: 50%;
+    /* padding: 10px; */
+    color: white;
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    text-align: center;
+    margin-right: 10px;
+    line-height: 30px;
 }
-.header {
-    display: flex; 
-    justify-content: center;
-    position: relative;
-    align-items: center;
-}
-h1 {
-    position: absolute;
-}
+
 #forkongithub a{
     background:#000;
     color:#fff;
@@ -41,6 +42,135 @@ h1 {
     bottom:1px;
     top:auto;
 }
+
+hr.horizontalLine{ 
+    position: relative;
+    /* display: inline-block; */
+    margin: 0 auto;
+    border: 0;
+    background: #dedede;
+    width: 1px;
+    height: 90%;
+}
+
+.switch[type="checkbox"] {
+    outline: 0;
+    user-select: none;
+    display: inline-block;
+    position: absolute;
+    opacity: 0;
+}
+
+input[type="checkbox"], input[type="radio"] {
+    vertical-align: baseline;
+}
+
+.switch[type="checkbox"]+label {
+    position: relative;
+    display: initial;
+    font-size: 1rem;
+    line-height: initial;
+    padding-left: 3.5rem;
+    padding-top: .2rem;
+    cursor: pointer;
+}
+
+.switch[type="checkbox"]+label::before, .switch[type="checkbox"]+label:before {
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 3rem;
+    height: 1.5rem;
+    border: 0.1rem solid transparent;
+    border-radius: 4px;
+    background: #2b3a55;
+    content: '';
+}
+.switch[type="checkbox"].is-info:checked+label::before, .switch[type="checkbox"].is-info:checked+label:before {
+    background: #209cee;
+}
+.switch[type="checkbox"].is-rounded+label::before, .switch[type="checkbox"].is-rounded+label:before {
+    border-radius: 24px;
+}
+
+.switch[type="checkbox"].is-rounded+label::after, .switch[type="checkbox"].is-rounded+label:after {
+    border-radius: 50%;
+}
+.switch[type="checkbox"]:checked+label::after {
+    left: 1.625rem;
+}
+.switch[type="checkbox"]+label::after, .switch[type="checkbox"]+label:after {
+    display: block;
+    position: absolute;
+    top: .25rem;
+    left: .25rem;
+    width: 1rem;
+    height: 1rem;
+    transform: translate3d(0, 0, 0);
+    border-radius: 4px;
+    background: #fff;
+    transition: all 0.25s ease-out;
+    content: '';
+}
+
+.validat{
+    justify-content: space-between; display: flex; flex-direction: column;
+}
+
+.vuit{margin-right: 10px; 
+font-size: 1rem;}
+
+.mrtime{ background-image: url("../assets/mrtime.png");
+    background-position: left bottom;
+    background-repeat: no-repeat;
+    background-size: contain;
+    padding-left: 100px;
+}
+
+h3{margin-bottom: 5px!important;}
+
+
+.item{
+   
+  }
+
+.columns button{
+    margin-top: auto;
+  }
+
+.material-icons.md-36 { font-size: 36px; }
+.material-icons.md-48 { font-size: 48px; color: #dedede; margin-top: -5px; }
+
+h2.is-size-4 {
+    margin-bottom: 30px;
+}
+
+h2.is-size-4.marginretoc {
+    margin-bottom: 0px!important;
+}
+
+
+
+footer{    background-color: #3298dc!important;}
+
+/*.padding-t {
+    padding: 2%;
+}
+.header {
+    display: flex; 
+    justify-content: center;
+    position: relative;
+    align-items: center;
+}
+h1 {
+    position: absolute;
+}
+
+*/
+
+
+
 @media screen and (min-width:200px){
     #forkongithub{
         position:fixed;
@@ -53,10 +183,10 @@ h1 {
         z-index:9999;
     }
     #forkongithub a{
-        width:200px;
+        /*width:200px;*/
         position:absolute;
-        top:60px;
-        right:-60px;
+        top: 44px;
+        right: -48px;
         transform:rotate(45deg);
         -webkit-transform:rotate(45deg);
         -ms-transform:rotate(45deg);
