--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 
-html, body{ height: 100%; background-color: #3298dc!important;}
+html, body{ height: 100%; overflow: inherit; background-color: #3298dc!important;}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #3298dc!important;}
 .mat-h1, .mat-headline, .mat-typography h1{margin-bottom: 0!important;}
 
